EXTRA_DIST            = bootstrap examples packaging \
                        tests doc icons share
SUBDIRS               = opensim tests share icons src

MAINTAINERCLEANFILES  = Makefile.in aclocal.m4 configure \
                        config-h.in stamp-h.in stamp-h1

ACLOCAL_AMFLAGS       = -I m4
