iconsdir = $(datadir)/icons

icons_DATA = opensim-cloud.svg opensim-stock.svg opensim-flow.svg \
             opensim-var.svg opensim-infl.svg
pkgdata_DATA = opensim-cloud.svg model-icon.svg

EXTRA_DIST = $(icons_DATA) model-icon.svg

icondir = $(top_srcdir)/activity/icons
icon_DATA = $(icons_DATA)

hicolordir = /usr/share/icons/hicolor/scalable/apps
hicolor_DATA = model-icon.svg
