iconsdir = $(datadir)/icons

icons_DATA = opensim-cloud.svg opensim-stock.svg opensim-flow.svg \
             opensim-var.svg opensim-infl.svg opensim-canvas.svg \
             opensim-graphs.svg opensim-stock.png opensim-flow.png \
             opensim-var.png opensim-infl.png opensim-canvas.png \
             opensim-graphs.png
pkgdata_DATA = opensim-cloud.svg model-icon.svg model-icon.png

EXTRA_DIST = $(icons_DATA) model-icon.svg model-icon.png

#icondir = $(top_srcdir)/activity/icons
#icon_DATA = $(icons_DATA)

#activitydir = $(top_srcdir)/activity/activity
#activity_DATA = model-icon.svg

#appidir = $(top_srcdir)/mac/Model.app/Contents/Resources
#appi_DATA = model-icon.svg model-icon.png

#appdir = $(appidir)/icons
#app_DATA = $(icons_DATA)


hicolordir = $(iconsdir)/hicolor/scalable/apps
hicolor_DATA = model-icon.svg
