EXTRA_DIST              = SimBuilder.h \
                          PythonPrintModule.h InterpreterModule.h \
                          AS3PrintModule.h

noinst_LTLIBRARIES      = libCodeGen.la
libCodeGen_la_SOURCES   = SimBuilder.cpp \
                          PythonPrintModule.cpp InterpreterModule.cpp \
                          AS3PrintModule.cpp
libCodeGen_la_LDFLAGS   = -no-undefined