AM_CFLAGS               = $(OPENSIM_XML2_CFLAGS)  $(GOBJ_CFLAGS)
AM_CXXFLAGS             = $(AM_CFLAGS)
AM_LDFLAGS              = $(OPENSIM_XML2_LDFLAGS) $(GOBJ_LIBS)

EXTRA_DIST              = IOxml.h IOVenText.h IOInterface.h model-ioxml.h

noinst_LTLIBRARIES      = libIO.la
libIO_la_SOURCES        = model-ioxml.c
