EXTRA_DIST = __init__.py stock.py

if HAVE_PYTHON
opensimdir = $(pkgpythondir)/visuals/widgets
opensim_PYTHON = __init__.py stock.py variable.py text.py item.py flow.py \
                 cloud.py
activitydir = $(top_srcdir)/activity/site-packages/opensim/visuals/widgets
activity_PYTHON = $(opensim_PYTHON)
endif


